# Parallel-and-Distributed-Graph-Coloring

./: CMakeLists.txt  README.md  run_all.sh
src/: coloring.hpp  coloring_mpi.cpp  generate.cpp  generate.hpp  graph.cpp  graph.hpp  io.cpp  io.hpp  main.cpp  solver_common.cpp  solver_greedy.cpp  solver_k2.cpp  solver_serial.cpp  solver_threads.cpp  timer.hpp
